<resources>
    <string name="app_name">StyleSync</string>
    <string name="title_closet">Closet</string>
    <string name="title_outfit">Outfit</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_first_onboarding">FirstOnboardingActivity</string>
    <string name="onboarding_1">
        Welcome to StyleSync, your personal fashion haven! We’re thrilled to have you on board.
        Let’s embark on a journey to elevate your style game together!
    </string>
    <string name="onboarding_2">
        First things first, let\'s get you set up! Please create an account to unlock the full
        potential of StyleSync. Your style adventure awaits!
    </string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="reenter_password_hint">Re-enter password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="already_have_account">"Already have an account?"</string>
    <string name="dont_have_account">"Don't have an account?"</string>
    <string name="logo_description">logo</string>
    <string name="register_page_title">Register</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name_label">Name</string>

    <string name="login_page_title">Login</string>
</resources>