<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/logo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_page_title"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:layout_below="@id/pageTitle"
        android:layout_marginTop="64dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_below="@id/editTextName"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="16dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextReEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reenter_password_hint"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="16dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_above="@id/haveAccount"
        android:textAllCaps="false"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textSize="12sp"
        android:layout_above="@id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:textColor="@color/teal_blue"
        android:layout_marginTop="4dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/creamy_white"/>
</RelativeLayout>
