<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_closet">

    <fragment
        android:id="@+id/navigation_closet"
        android:name="com.example.stylesync.ui.closet.ClosetFragment"
        android:label="@string/title_closet"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_outfit"
        android:name="com.example.stylesync.ui.outfit.OutfitFragment"
        android:label="@string/title_outfit"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.stylesync.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>